<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Menu!</string>
    <string name="app_name">E-Menu</string>
    <string name="total">總計:</string>
    <string name="meal">餐點:</string>
    
    <string name="h_1">勁辣雞腿蛋堡</string>
    <string name="h_2">卡啦雞腿蛋堡</string>
    <string name="h_3">超厚牛肉起司堡</string>
    <string name="h_4">豬排蛋堡</string>
    <string name="h_5">香雞蛋堡</string>
    <string name="h_6">里肌蛋堡</string>
    <string name="h_7">雞柳蛋堡</string>
    <string name="h_8">龍鳳蛋堡</string>
    <string name="h_9">雙喜蛋堡</string>
    <string name="h_10">鮪魚蛋堡</string>
    <string name="h_11">起司蛋堡</string>
    <string name="h_12">蔬菜蛋堡</string>
    <string name="h_13">豬肉蛋堡</string>
    <string name="h_14">火腿蛋堡</string>
    <string name="h_15">培根蛋堡</string>
    <string name="h_16">麥克雞蛋堡</string>
    <string name="h_17">蛋堡</string>
    <string name="h_18">哈辣雞蛋堡</string>
    
    <string name="o_1">勁辣雞腿蛋餅</string>
    <string name="o_2">卡啦雞腿蛋餅</string>
    <string name="o_3">超厚牛肉蛋餅</string>
    <string name="o_4">豬排蛋餅</string>
    <string name="o_5">香雞蛋餅</string>
    <string name="o_6">里肌蛋餅</string>
    <string name="o_7">雞柳蛋餅</string>
    <string name="o_8">龍鳳蛋餅</string>
    <string name="o_9">雙喜蛋餅</string>
    <string name="o_10">鮪魚蛋餅</string>
    <string name="o_11">起司蛋餅</string>
    <string name="o_12">蔬菜蛋餅</string>
    <string name="o_13">豬肉蛋餅</string>
    <string name="o_14">火腿蛋餅</string>
    <string name="o_15">培根蛋餅</string>
    <string name="o_16">肉鬆蛋餅</string>
    <string name="o_17">玉米蛋餅</string>
    <string name="o_18">原味蛋餅</string>
        
    <string name="d_1">玉米濃湯</string>
    <string name="d_2">薏仁漿(冰/熱)</string>
    <string name="d_3">熱豆漿</string>
    <string name="d_4">冰豆漿</string>
    <string name="d_5">米漿(冰/熱)</string>
    <string name="d_6">紅茶(冰/熱)</string>
    <string name="d_7">奶茶(冰/熱)</string>
    <string name="d_8">綠茶(加糖/無糖)</string>
    <string name="d_9">柳橙汁</string>
    <string name="d_10">葡萄汁</string>
    <string name="d_11">研磨咖啡</string>
    <string name="d_12">綠豆沙牛奶</string>
    <string name="d_13">鮮奶</string>
    <string name="d_14">玩具牛奶</string>
    <string name="d_15">百香紅(綠)</string>
    <string name="d_16">可樂</string>
    
    <string name="c_1">勁辣雞腿蛋可頌</string>
    <string name="c_2">卡啦雞腿蛋可頌</string>
    <string name="c_3">超厚牛肉起司蛋可頌</string>
    <string name="c_4">豬排蛋可頌</string>
    <string name="c_5">香雞蛋可頌</string>  
    <string name="c_6">里肌蛋可頌</string>
    <string name="c_7">雞柳蛋可頌</string>
    <string name="c_8">龍鳳蛋可頌</string>
    <string name="c_9">雙喜蛋可頌</string>
    <string name="c_10">鮪魚蛋可頌</string>
    <string name="c_11">起司蛋可頌</string>
    <string name="c_12">蔬菜蛋可頌</string>
    <string name="c_13">豬肉蛋可頌</string>
    <string name="c_14">火腿蛋可頌</string>
    <string name="c_15">培根蛋可頌</string>
    <string name="c_16">肉鬆蛋可頌</string>
    <string name="c_17">花生可頌</string>
    <string name="c_18">巧克力可頌</string>
        
    <string name="s_1">勁辣雞腿蛋燒餅</string>
    <string name="s_2">卡啦雞腿蛋燒餅</string>
    <string name="s_3">超厚牛肉起司蛋燒餅</string>
    <string name="s_4">豬排蛋燒餅</string>
    <string name="s_5">香雞蛋燒餅</string>
    <string name="s_6">里肌蛋燒餅</string>
    <string name="s_7">雞柳蛋燒餅</string>
    <string name="s_8">龍鳳蛋燒餅</string>
    <string name="s_9">雙喜蛋燒餅</string>
    <string name="s_10">鮪魚蛋燒餅</string>
    <string name="s_11">起司蛋燒餅</string>
    <string name="s_12">蔬菜蛋燒餅</string>
    <string name="s_13">豬肉蛋燒餅</string>
    <string name="s_14">火腿蛋燒餅</string>
    <string name="s_15">培根蛋燒餅</string>
    <string name="s_16">肉鬆蛋燒餅</string>
    <string name="s_17">原味蛋燒餅</string>
        
    <string name="t_1">烤勁辣雞腿蛋</string>
    <string name="t_2">烤卡啦雞腿蛋</string>
    <string name="t_3">烤超厚牛肉起司蛋</string>
    <string name="t_4">烤豬排蛋</string>
    <string name="t_5">烤香雞蛋</string>
    <string name="t_6">烤里肌蛋</string>
    <string name="t_7">烤雞柳蛋</string>
    <string name="t_8">烤龍鳳蛋</string>
    <string name="t_9">烤雙喜蛋</string>
    <string name="t_10">烤鮪魚蛋</string>
    <string name="t_11">烤起司蛋</string>
    <string name="t_12">烤蔬菜蛋</string>
    <string name="t_13">烤豬肉蛋</string>
    <string name="t_14">烤火腿蛋</string>
    <string name="t_15">烤培根蛋</string>
    <string name="t_16">烤肉鬆蛋</string>
    <string name="t_17">吐司加蛋</string>
    <string name="t_18">烤總匯蛋</string>

    <string name="cost_10">10</string>
    <string name="cost_15">15</string>
    <string name="cost_20">20</string>
    <string name="cost_25">25</string>
    <string name="cost_30">30</string>
    <string name="cost_35">35</string>
    <string name="cost_40">40</string>
    <string name="cost_45">45</string>
    <string name="cost_50">50</string>
    <string name="cost_55">55</string>
    <string name="cost_60">60</string>
    <string name="Checkout">結帳</string>
    <string name="in">內用</string>
    <string name="out">外帶</string>
    <string name="type">類別:</string>
    <string name="Clear">清除</string>
    <string name="SpicyChicken">勁辣雞腿</string>
    <string name="KaraChicken">卡啦雞腿</string>
    <string name="Beef">超厚牛肉</string>
    <string name="PorkStack">豬排</string>
    <string name="Chicken">香雞</string>
    <string name="PorkFillet">里肌</string>
    <string name="ChickenBar">雞柳</string>
    <string name="Dragon">龍鳳</string>
    <string name="DoubleShi">雙喜</string>
    <string name="Tuna">鮪魚</string>
    <string name="Cheese">起司</string>
    <string name="Vegetable">蔬菜</string>
    <string name="Pork">豬肉</string>
    <string name="Ham">火腿</string>
    <string name="Bacon">培根</string>
    <string name="MacChicken">麥克雞</string>
    <string name="Egg">蛋</string>
    <string name="HotSpicyChicken">哈辣雞</string>
    <string name="PorkFloss">肉鬆</string>
    <string name="Corn">玉米</string>
    <string name="Original">原味</string>
    <string name="Peanut">花生</string>
    <string name="Chocolate">巧克力</string>
    <string name="All">總匯</string>
    <string name="Burger">堡</string>
    <string name="Toast">吐司</string>
    <string name="Pancake">蛋餅</string>
    <string name="HotPancake">蛋燒餅</string>
    <string name="Croissants">可頌</string>
    <string name="Smallcount">小計</string>
    <string name="Cornsoup">玉米濃湯</string>
    <string name="IcePearlBarley">冰薏仁漿</string>
    <string name="HotPearlBarley">熱薏仁漿</string>
    <string name="IceRice">冰米漿</string>
    <string name="HotRice">熱米漿</string>
    <string name="IceBlackTea">冰紅茶</string>
    <string name="HotBlackTea">熱紅茶</string>
    <string name="IceMilkTea">冰奶茶</string>
    <string name="HotMilkTea">熱奶茶</string>
    <string name="GreenTea">綠茶</string>
    <string name="NoSugurGreenTea">無糖綠茶</string>
    <string name="OrangeJuice">柳橙汁</string>
    <string name="GrapeJuice">葡萄汁</string>
    <string name="Coffee">研磨咖啡</string>
    <string name="GreenBeanMilk">綠豆沙牛奶</string>
    <string name="Milk">鮮奶</string>
    <string name="ToyMilk">玩具牛奶</string>
    <string name="BaiBlackTea">百香紅茶</string>
    <string name="BaiGreenTea">百香綠茶</string>
    <string name="Coke">可樂</string>
</resources>
