<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp"
    android:id="@+id/toastLayout" >
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="fill_parent"
	    android:padding="5dp"
	    android:id="@+id/toastLayout1" >
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/t_1" 
	    	android:id="@+id/button_t_1" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/t_2" 
	    	android:id="@+id/button_t_2" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/t_3" 
	    	android:id="@+id/button_t_3" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/t_4" 
	    	android:id="@+id/button_t_4" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/t_5" 
	    	android:id="@+id/button_t_5" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/t_6"
	    	android:id="@+id/button_t_6" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/t_7" 
	    	android:id="@+id/button_t_7" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/t_8" 
	    	android:id="@+id/button_t_8" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/t_9" 
	    	android:id="@+id/button_t_9" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/t_10" 
	    	android:id="@+id/button_t_10" 
	    	android:layout_height="wrap_content">
	    </Button>
	</LinearLayout>
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="fill_parent"
	    android:padding="5dp"
	    android:id="@+id/toastLayout2" >
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/t_11"
	    	android:id="@+id/button_t_11" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/t_12" 
	    	android:id="@+id/button_t_12" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/t_13" 
	    	android:id="@+id/button_t_13" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/t_14" 
	    	android:id="@+id/button_t_14" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/t_15" 
	    	android:id="@+id/button_t_15" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/t_16"
	    	android:id="@+id/button_t_16" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/t_17" 
	    	android:id="@+id/button_t_17" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/t_18" 
	    	android:id="@+id/button_t_18" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <TextView
	    	android:id="@+id/textview"
	    	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/hello">
	    </TextView>
	    <TextView
	    	android:id="@+id/textview2"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	        android:text="@string/hello">
	    </TextView>
	</LinearLayout>
</LinearLayout>