<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp"
    android:id="@+id/croissantLayout" >
    <LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="fill_parent"
	    android:padding="5dp"
	    android:id="@+id/croissantLayout1" >
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/c_1" 
	    	android:id="@+id/button_c_1" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/c_2" 
	    	android:id="@+id/button_c_2" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/c_3" 
	    	android:id="@+id/button_c_3" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/c_4" 
	    	android:id="@+id/button_c_4" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/c_5" 
	    	android:id="@+id/button_c_5" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/c_6"
	    	android:id="@+id/button_c_6" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/c_7" 
	    	android:id="@+id/button_c_7" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/c_8" 
	    	android:id="@+id/button_c_8" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/c_9" 
	    	android:id="@+id/button_c_9" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/c_10" 
	    	android:id="@+id/button_c_10" 
	    	android:layout_height="wrap_content">
	    </Button>
    </LinearLayout>
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="wrap_content"
		android:layout_height="fill_parent"
		android:padding="5dp"
		android:id="@+id/croissantLayout2" >
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/c_11"
	    	android:id="@+id/button_c_11" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/c_12" 
	    	android:id="@+id/button_c_12" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/c_13" 
	    	android:id="@+id/button_c_13" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/c_14" 
	    	android:id="@+id/button_c_14" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/c_15" 
	    	android:id="@+id/button_c_15" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/c_16"
	    	android:id="@+id/button_c_16" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/c_17" 
	    	android:id="@+id/button_c_17" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/c_18" 
	    	android:id="@+id/button_c_18" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <TextView
	    	android:id="@+id/textview"
	    	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/hello">
	    </TextView>
	    <TextView
	    	android:id="@+id/textview2"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	        android:text="@string/hello">
	    </TextView>
    </LinearLayout>
</LinearLayout>