<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp"
    android:id="@+id/drinksLayout" >
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="fill_parent"
	    android:padding="5dp"
	    android:id="@+id/drinksLayout1" >
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/d_1" 
	    	android:id="@+id/button_d_1" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/d_2" 
	    	android:id="@+id/button_d_2" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/d_3" 
	    	android:id="@+id/button_d_3" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/d_4" 
	    	android:id="@+id/button_d_4" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/d_5" 
	    	android:id="@+id/button_d_5" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/d_6"
	    	android:id="@+id/button_d_6" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/d_7" 
	    	android:id="@+id/button_d_7" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/d_8" 
	    	android:id="@+id/button_d_8" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/d_9" 
	    	android:id="@+id/button_d_9" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/d_10" 
	    	android:id="@+id/button_d_10" 
	    	android:layout_height="wrap_content">
	    </Button>
	</LinearLayout>
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="fill_parent"
	    android:padding="5dp"
	    android:id="@+id/drinksLayout2" >
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/d_11"
	    	android:id="@+id/button_d_11" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/d_12" 
	    	android:id="@+id/button_d_12" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/d_13" 
	    	android:id="@+id/button_d_13" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/d_14" 
	    	android:id="@+id/button_d_14" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/d_15" 
	    	android:id="@+id/button_d_15" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/d_16"
	    	android:id="@+id/button_d_16" 
	    	android:layout_height="wrap_content">
	    </Button>
	    <TextView
	    	android:id="@+id/textview"
	    	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/hello">
	    </TextView>
	    <TextView
	    	android:id="@+id/textview2"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	        android:text="@string/hello">
	    </TextView>
    </LinearLayout>
</LinearLayout>